fix coin img not showing

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   line-height: 24px;
 
-  background-color: #F5F5F5;
+  /* background-color: #F5F5F5; */
+  background-color: #fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
